changing authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Author: Dmitry Odzerikho <dmitry.odzerikho@gmail.com>
 Author: Michi Henning <michi.henning@canonical.com>
 Author: Pieter Hintjens <ph@imatix.com>
 Author: Rob Hubbard <rob.hubbard@datasift.com>
+Author: Dinka Ranns <dinka.ranns@gmail.com>
