Added some fundamental documentation: a main page for the doxygen docs and two simple examples.

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Author: Michi Henning <michi.henning@canonical.com>
 Author: Pieter Hintjens <ph@imatix.com>
 Author: Rob Hubbard <rob.hubbard@datasift.com>
 Author: Dinka Ranns <dinka.ranns@gmail.com>
+Author: Olaf Lenz <olenz@icp.uni-stuttgart.de>
