--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Author: Pieter Hintjens <ph@imatix.com>
 Author: Rob Hubbard <rob.hubbard@datasift.com>
 Author: Dinka Ranns <dinka.ranns@gmail.com>
 Author: Olaf Lenz <olenz@icp.uni-stuttgart.de>
+Author: Krzysztof Rapacki <shauren.dev@gmail.com>
