--- a/AUTHORS
+++ b/AUTHORS
@@ -9,3 +9,4 @@ Author: Rob Hubbard <rob.hubbard@datasift.com>
 Author: Dinka Ranns <dinka.ranns@gmail.com>
 Author: Olaf Lenz <olenz@icp.uni-stuttgart.de>
 Author: Krzysztof Rapacki <shauren.dev@gmail.com>
+Author: Prem Shankar Kumar <meprem@gmail.com>
