--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,4 @@ Author: Dinka Ranns <dinka.ranns@gmail.com>
 Author: Olaf Lenz <olenz@icp.uni-stuttgart.de>
 Author: Krzysztof Rapacki <shauren.dev@gmail.com>
 Author: Prem Shankar Kumar <meprem@gmail.com>
+Author: Arnaud Kapp <kapp.arno@gmail.com>
