add cstdlib header to ensure EXIT_FAILURE presence
Using some cross-compiling toolchains, EXIT_FAILURE is not always
properly defined without this inclusion.

Add myself to AUTHORS.

Signed-off-by: Lionel Orry <lionel.orry@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@ Author: Olaf Lenz <olenz@icp.uni-stuttgart.de>
 Author: Krzysztof Rapacki <shauren.dev@gmail.com>
 Author: Prem Shankar Kumar <meprem@gmail.com>
 Author: Arnaud Kapp <kapp.arno@gmail.com>
+Author: Lionel Orry <lionel.orry@gmail.com>
