--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Individual Contributors
 
 Author: Ben Gray <ben@benjamg.com>
 Author: Dmitry Odzerikho <dmitry.odzerikho@gmail.com>
+Author: Egor Poleshko <somedevfox@gmail.com>
 Author: Michi Henning <michi.henning@canonical.com>
 Author: Pieter Hintjens <ph@imatix.com>
 Author: Rob Hubbard <rob.hubbard@datasift.com>
